--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
 
+  google_fonts:
+  tmdb_api: ^2.1.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
